# Hex-editor

./: README.md
hexeditor/: CMakeLists.txt
hexeditor/core/: HexBuffer.cpp  HexBuffer.h  HexDocument.cpp  HexDocument.h  HexSearchEngine.cpp  HexSearchEngine.h  HexUndoStack.cpp  HexUndoStack.h
hexeditor/tests/: tst_hexbuffer.cpp  tst_hexdocument.cpp  tst_hexsearchengine.cpp
hexeditor/tests/core/: tst_hexbuffer.cpp  tst_hexdocument.cpp  tst_hexundostack.cpp
hexeditor/tests/ui/: tst_hexcursor.cpp  tst_hexeditorwidget.cpp  tst_hexview.cpp
hexeditor/ui/: HexCursor.cpp  HexCursor.h  HexEditorWidget.cpp  HexEditorWidget.h  HexFileExplorer.cpp  HexFileExplorer.h  HexView.cpp  HexView.h
